--- a/src/pages/home/css/index.module.css
+++ b/src/pages/home/css/index.module.css
@@ -46,3 +46,12 @@
 .buttonsGitHubButton {
   overflow: hidden;
 }
+
+.button:hover {
+  transform: translateY(-2px);
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+}
+
+.getStartedButton {
+  color: white !important;
+}
