fix: added css classes to use diff logos on diff modes

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -68,3 +68,18 @@
 .footer__links {
   text-align: center;
 }
+
+.themed-logo-light {
+  display: block;
+}
+.themed-logo-dark {
+  display: none;
+}
+
+[data-theme='dark'] .themed-logo-light {
+  display: none;
+}
+
+[data-theme='dark'] .themed-logo-dark {
+  display: block;
+}
